--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -11,6 +11,9 @@
   /* margin: auto; */
   height: 100vh;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pt-nine {
@@ -18,6 +21,8 @@
 }
 
 .container {
+  max-width: 800px;
+  margin: 0 auto;
   padding: 0 2rem;
 }
 
@@ -27,7 +32,7 @@
 
 .hero-text {
   font-family: "Joti One", serif;
-  font-size: 75px;
+  font-size: 70px;
   font-weight: 500;
   color: #ec4899;
   opacity: 0.8;
@@ -35,8 +40,8 @@
 
 .description {
   font-weight: 400;
-  font-size: 20px;
-  font-style: italic;
+  font-size: 23px;
+  /* font-style: italic; */
   opacity: 0.8;
   /* margin: 0.8rem 0; */
 }
@@ -53,35 +58,82 @@ button {
   height: 40px;
   border: none;
   opacity: 0.8;
-  background: black;
-  color: #fff;
   font-weight: 500;
-  border-radius: 0.7rem;
+  border-radius: 0.6rem;
   transition: all 0.3s;
 }
 
+.color-w-b-b {
+  background: black;
+  color: #fff;
+}
+
+.grid {
+  display: grid;
+  gap: 2rem;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
 button:hover {
-  background: #fff;
+  background: rgb(245, 239, 239);
   color: black;
 }
 
-@media (max-width: 1077px) {
+@media (max-width: 949px) {
+  .hero-text {
+    line-height: 0.9;
+  }
+
+  .description {
+    padding: 1rem 0;
+  }
+}
+
+@media (max-width: 893px) {
   .home {
-    padding-bottom: 10rem;
+    padding: 9rem 0;
+  }
+}
+
+@media (max-width: 899px) {
+  .home {
+    padding-bottom: 8rem;
+  }
+
+  body {
+    overflow-x: hidden;
   }
 
   .hero-text {
-    font-size: 72px;
-    line-height: 1;
+    font-size: 62px;
+    line-height: 0.9;
   }
 
-  .pt-nine {
-    padding-top: 10rem;
+  .description {
+    padding: 1rem 0;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 360px) {
+  .home {
+    padding-top: 7rem;
+  }
+
+  .hero-text {
+    font-size: 58px;
+  }
+
+  .description {
+    font-size: 18px;
   }
 }
 
 @media (max-width: 485px) {
-  body {
+  /* body {
     overflow-x: hidden;
   }
 
@@ -100,5 +152,5 @@ button:hover {
 
   .pt-nine {
     padding-top: 6rem;
-  }
+  } */
 }
