--- a/src/components/Gif.css
+++ b/src/components/Gif.css
@@ -1,12 +1,13 @@
 .gif {
-  height: 350px;
-  margin-left: 100px;
-  margin-top: -4rem;
+  height: 300px;
+  padding-bottom: 1rem;
+  /* margin-left: 100px;
+  margin-top: -4rem; */
 }
 
 @media (max-width: 485px) {
   .gif {
-    margin-left: 20px;
+    /* margin-left: 20px; */
     height: 250px;
     padding: 1.2rem 0;
   }
