--- a/src/pages/MealPage.css
+++ b/src/pages/MealPage.css
@@ -11,6 +11,12 @@
   /* align-items: center; */
 }
 
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 3rem 2rem;
+}
+
 .meal-img {
   width: 100%;
   height: 100%;
@@ -54,4 +60,16 @@
 
 .meal-txt {
   font-size: 1.1rem;
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: 0;
+  }
+
+  .fetch-btn-container {
+    margin-top: 8rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
